update design application

--- a/app/views/admin/auditories/index.html.twig
+++ b/app/views/admin/auditories/index.html.twig
@@ -2,7 +2,9 @@
 
 {% block content %}
     <div>
-        <h3><a href="{{ path('create_auditory') }}">Додати аудиторію</a></h3>
+        <div>
+            <a href="{{ path('create_auditory') }}" class="btn btn-primary">Додати аудиторію</a>
+        </div>
 
         <table class="table table-striped">
             <thead>
