--- a/app/views/admin/groups/index.html.twig
+++ b/app/views/admin/groups/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div>
-        <a href="{{ path('create_group') }}">Добавить групу</a>
+        <a href="{{ path('create_group') }}" class="btn btn-primary">Добавить групу</a>
     </div>
     <div>
         <table class="table table-striped">
