--- a/app/views/admin/subjects/index.html.twig
+++ b/app/views/admin/subjects/index.html.twig
@@ -2,7 +2,9 @@
 
 {% block content %}
     <div>
-    <h3><a href="{{ path('create_subject') }}">Додати предмет</a></h3>
+    <div>
+        <a href="{{ path('create_subject') }}" class="btn btn-primary">Додати предмет</a>
+    </div>
 
     <table class="table table-striped">
         <thead>
