--- a/app/views/admin/teachers/index.html.twig
+++ b/app/views/admin/teachers/index.html.twig
@@ -2,7 +2,9 @@
 
 {% block content %}
     <div>
-        <h3><a href="{{ path('create_teacher') }}">Додати викладача</a></h3>
+        <div>
+            <a href="{{ path('create_teacher') }}" class="btn btn-primary">Додати викладача</a>
+        </div>
 
         <table class="table table-striped">
             <thead>
