--- a/app/views/events/events_list.html.twig
+++ b/app/views/events/events_list.html.twig
@@ -23,7 +23,7 @@
                     <td>{{ event.event_date_end }}</td>
                     <td>{{ event.event_time_start }}</td>
                     <td>{{ event.event_time_end }}</td>
-                    <td>undefined</td>
+                    <td>{{ event.repeat_type }}</td>
                     <td>
                         {% for group in event.groups %}
                             {{ group.group_name }}
