--- a/web/assets/css/app.css
+++ b/web/assets/css/app.css
@@ -1,4 +1,6 @@
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
+
+
 html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
@@ -6230,4 +6232,8 @@ body,
 label,
 .checkbox label {
     font-weight: 300;
+}
+
+label {
+    font-weight: 900
 }
