--- a/app/views/admin/auditories/create.html.twig
+++ b/app/views/admin/auditories/create.html.twig
@@ -2,23 +2,34 @@
 
 {% block content %}
     <div>
-        <form action="{{ path('store_auditory') }}" method="POST">
-            <div>
-                <label for="auditory_number">Номер аудиторії</label>
-                <input type="text" id="auditory_number" name="auditory_number" placeholder="Введіть номер аудиторії"/>
+        <div>
+            <h3 align="center">Додавання нової аудиторії</h3>
+        </div>
+        <form action="{{ path('store_auditory') }}" method="POST" class="form-horizontal">
+            <div class="form-group">
+                <label for="auditory_number" class="col-sm-2 control-label">Номер аудиторії</label>
+
+                <div class="col-sm-9">
+                    <input type="text" id="auditory_number" name="auditory_number" class="form-control" placeholder="Введіть номер аудиторії"/>
+                </div>
             </div>
 
-            <div>
-                <label for="auditory_type">Тип аудиторії</label>
-                <select id="auditory_type" name="auditory_type">
-                    <option value="0">Лабораторна</option>
-                    <option value="1">Лекційна</option>
-                    <option value="2">Інший</option>
-                </select>
+            <div class="form-group">
+                <label for="auditory_type" class="col-sm-2 control-label">Тип аудиторії</label>
+
+                <div class="col-sm-9">
+                    <select id="auditory_type" name="auditory_type" class="form-control">
+                        <option value="0">Лабораторна</option>
+                        <option value="1">Лекційна</option>
+                        <option value="2">Інший</option>
+                    </select>
+                </div>
             </div>
 
-            <div>
-                <button type="submit">Створити</button>
+            <div class="form-group">
+                <div class="col-sm-9 col-sm-offset-2">
+                    <button type="submit" class="btn btn-success">Створити</button>
+                </div>
             </div>
         </form>
     </div>
