--- a/app/views/admin/subjects/new.html.twig
+++ b/app/views/admin/subjects/new.html.twig
@@ -2,21 +2,33 @@
 
 {% block content %}
     <div>
-        <form action="{{ path('story_subject') }}" method="POST">
-            <div>
-                <input type="text" id="subject_name" name="subject_name" />
+        <form action="{{ path('story_subject') }}" method="POST" class="form-horizontal">
+            <div class="form-group">
+                <label for="subject_name" class="col-sm-2 control-label">
+                    Назва предмета
+                </label>
+
+                <div class="col-sm-9">
+                    <input type="text" id="subject_name" name="subject_name" class="form-control" />
+                </div>
             </div>
 
-            <div>
-                <select name="teachers[]" id="teachers" multiple>
-                    {% for teacher in teachers %}
-                        <option value="{{ teacher.teacher_code }}">{{ teacher.teacher_surname }} {{ teacher.teacher_name }} {{ teacher.teacher_last_name }}</option>
-                    {% endfor %}
-                </select>
+            <div class="form-group">
+                <label for="teachers" class="col-sm-2 control-label">Викладачі:</label>
+
+                <div class="col-sm-9">
+                    <select name="teachers[]" id="teachers" multiple class="form-control">
+                        {% for teacher in teachers %}
+                            <option value="{{ teacher.teacher_code }}">{{ teacher.teacher_surname }} {{ teacher.teacher_name }} {{ teacher.teacher_last_name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
             </div>
 
-            <div>
-                <button type="submit">Створити</button>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-9">
+                    <button class="btn btn-success" type="submit">Створити</button>
+                </div>
             </div>
         </form>
     </div>
