--- a/app/views/admin/auditories/index.html.twig
+++ b/app/views/admin/auditories/index.html.twig
@@ -19,7 +19,25 @@
                     <td><a href="{{ path('view_auditory_client', {'auditory_number' : auditory.auditory_number}) }}">{{auditory.auditory_number}}</a></td>
                     <td>{{auditory.auditory_type}}</td>
                 </tr>
+            {% else %}
+                <tr>
+                    <td colspan="2">На цій сторінці немає ні однієї аудиторії</td>
+                </tr>
             {% endfor %}
         </table>
+
+        {% if (pagination is defined) %}
+        <div class="navigation">
+            {% if pagination['prev_page'] >= 1 %}
+                <a href="{{ path('list_auditories_admin') }}?page={{ pagination['prev_page'] }}">Попередня сторінка</a>
+            {% endif %}
+            <span>{{ pagination['current_page'] }}</span>
+            <a href="{{ path('list_auditories_admin') }}?page={{ pagination['next_page'] }}">Наступна сторінка</a>
+        </div>
+        {% else %}
+        <div class="navigation">
+            <a href="{{ path('list_auditories_admin') }}?page=1">Перша сторінка</a>
+        </div>
+        {% endif %}
     </div>
 {% endblock %}
