--- a/app/views/events/events_list.html.twig
+++ b/app/views/events/events_list.html.twig
@@ -4,14 +4,12 @@
         <table class="table table-striped">
             <thead>
             <tr>
+                <th>Код події</th>
                 <th>Дата початку</th>
                 <th>Дата кінця</th>
                 <th>Час початку</th>
                 <th>Час кінця</th>
                 <th>Повторення</th>
-                <th>Група(и)</th>
-                <th>Предмет</th>
-                <th>Викладач</th>
                 <th>Тип</th>
             </tr>
             </thead>
@@ -19,18 +17,12 @@
 
             {% for event in events %}
                 <tr>
+                    <td><a href="{{ path('view_event_client', {'event_code' : event.event_code}) }}">{{ event.event_code }}</a></td>
                     <td>{{ event.event_date_start }}</td>
                     <td>{{ event.event_date_end }}</td>
                     <td>{{ event.event_time_start }}</td>
                     <td>{{ event.event_time_end }}</td>
                     <td>{{ event.repeat_type }}</td>
-                    <td>
-                        {% for group in event.groups %}
-                            {{ group.group_name }}
-                        {% endfor %}
-                    </td>
-                    <td>{{ event.subject.subject_name }}</td>
-                    <td>{{ event.teacher.teacher_surname }} {{ event.teacher.teacher_name }} {{ event.teacher.teacher_last_name }}</td>
                     <td>{{ event.event_type }}</td>
                 </tr>
             {% endfor %}
