--- a/app/views/events/index.html.twig
+++ b/app/views/events/index.html.twig
@@ -3,19 +3,19 @@
 {% block content %}
 <div>
     <h3>
-        <a href="{{ path('change_date_link', {'timestamp' : timestamps.prevday}) }}">Назад</a>
+        <a href="{{ path('change_date_link', {'timestamp' : timestamps.prevday}) }}"><span class="glyphicon glyphicon-chevron-left"></span></a>
 
-        <span>Розклад зайнять на {{ timestamps.current }}</span>
+        <span>{{ timestamps.current }}</span>
 
-        <a href="{{ path('change_date_link', {'timestamp' : timestamps.nextday}) }}">Вперед</a>
+        <a href="{{ path('change_date_link', {'timestamp' : timestamps.nextday}) }}"><span class="glyphicon glyphicon-chevron-right"></span></a>
     </h3>
 
     <table class="table table-striped">
         <thead>
         <tr>
             <th>Код події</th>
-            <th>Дата початку</th>
-            <th>Дата кінця</th>
+            <th>Час початку</th>
+            <th>Час кінця</th>
             <th>Аудиторія</th>
             <th>Група(и)</th>
             <th>Предмет</th>
@@ -35,7 +35,25 @@
                 <td><a href="{{ path('view_teacher_client', {'teacher_code' : event.teacher.teacher_code}) }}">{{ event.teacher.teacher_surname }} {{ event.teacher.teacher_name }}</a></td>
                 <td>{{ event.event_type }}</td>
             </tr>
+        {% else %}
+            <tr>
+                <td colspan="2">На цій сторінці немає ні однієї події</td>
+            </tr>
         {% endfor %}
     </table>
+
+    {% if (pagination is defined) %}
+        <div class="navigation">
+            {% if pagination['prev_page'] >= 1 %}
+                <a href="{{ path('list_events_client') }}?page={{ pagination['prev_page'] }}">Попередня сторінка</a>
+            {% endif %}
+            <span>{{ pagination['current_page'] }}</span>
+            <a href="{{ path('list_events_client') }}?page={{ pagination['next_page'] }}">Наступна сторінка</a>
+        </div>
+    {% else %}
+        <div class="navigation">
+            <a href="{{ path('list_events_client') }}?page=1">Перша сторінка</a>
+        </div>
+    {% endif %}
 </div>
 {% endblock %}
